# docs/swagger.yaml
@@ -692,6 +692,26 @@ paths:
       summary: 提现记录
       tags:
       - 用户中心
+  /app/platform/setting:
+    get:
+      consumes:
+      - application/json
+      responses:
+        "200":
+          description: 平台配置
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  additionalProperties: true
+                  type: object
+                msg:
+                  type: string
+              type: object
+      summary: 获取平台配置
+      tags:
+      - 公共中心
 securityDefinitions:
   ApiKeyAuth:
     in: header
